--- a/articulos/facebook-ads-cuba.html
+++ b/articulos/facebook-ads-cuba.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Publicidad en Facebook para Negocios en Cuba | Agencia Señores</title>
-  <meta name="description" content="¿Tus ventas dependen de Revolico? Implementa estrategias de publicidad profesional en Facebook e Instagram para MIPYMES en Santa Clara y el centro de Cuba." />
+  <meta name="description" content="¿Tus ventas dependen de Revolico? Implementa estrategias de publicidad profesional en Facebook e Instagram para <a href="../diseno-web-santa-clara.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">MIPYMES en Santa Clara</a> y el centro de Cuba." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
   <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
