--- a/articulos/guia-ficha-costo-mipyme-cuba.html
+++ b/articulos/guia-ficha-costo-mipyme-cuba.html
@@ -72,7 +72,7 @@
       </ol>
 
       <h2>4. La Revolución Tecnológica: Software NEXUS de Agencia Señores</h2>
-      <p>En <strong>Agencia Señores</strong>, hemos desarrollado <strong>NEXUS</strong>, un software de gestión diseñado específicamente para las condiciones de Cuba. Nuestra arquitectura <strong>Offline-First</strong> garantiza que puedas seguir facturando y controlando tus costos incluso durante los apagones o caídas de red.</p>
+      <p>En <strong>Agencia Señores</strong>, hemos desarrollado <strong>NEXUS</strong>, un <a href="../index.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">software de gestión</a> diseñado específicamente para las condiciones de Cuba. Nuestra arquitectura <strong>Offline-First</strong> garantiza que puedas seguir facturando y controlando tus costos incluso durante los apagones o caídas de red.</p>
       <p>NEXUS automatiza la creación de tus fichas de costo legalmente válidas, actualizándose en tiempo real cada vez que registras una nueva compra de insumos, permitiéndote ajustar tu estrategia de precios antes de que sea demasiado tarde.</p>
 
       <section class="faq-section" style="margin-top: 60px; border-top: 1px solid #333; padding-top: 40px;">
