--- a/articulos/hostales-web-directa.html
+++ b/articulos/hostales-web-directa.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="article-body">
-      <p>En el corazón de Trinidad y Cienfuegos, se libra una batalla por la soberanía económica. Si eres dueño de un hostal o casa de renta de lujo, es probable que hayas construido tu negocio sobre los cimientos prestados de gigantes como Airbnb.</p>
+      <p>En el corazón de Trinidad y  <a href="../diseno-web-cienfuegos.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Cienfuegos</a>, se libra una batalla por la soberanía económica. Si eres dueño de un hostal o casa de renta de lujo, es probable que hayas construido tu negocio sobre los cimientos prestados de gigantes como Airbnb.</p>
 
       <p>Durante años, el trato parecía justo. Pero hacia el 2025, la "simbiosis" se ha transformado en dependencia. El modelo de negocio de las agencias online ha cambiado para maximizar sus beneficios a costa de tu margen.</p>
 
