--- a/articulos/marketing-digital-santa-clara-estrategia.html
+++ b/articulos/marketing-digital-santa-clara-estrategia.html
@@ -61,7 +61,7 @@
     </header>
 
     <div class="article-body">
-      <p>Santa Clara ha sido históricamente el termómetro comercial del centro de Cuba. Sin embargo, en 2025, el éxito de una MIPYME en el Parque Vidal o en las zonas comerciales de la ciudad ya no depende de quién grita más fuerte en los grupos de compraventa, sino de quién gestiona mejor su presencia digital.</p>
+      <p>Santa Clara ha sido históricamente el termómetro comercial del centro de Cuba. Sin embargo, en 2025, el éxito de una<a href="../diseno-web-santa-clara.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">MIPYME en el Parque Vidal</a> o en las zonas comerciales de la ciudad ya no depende de quién grita más fuerte en los grupos de compraventa, sino de quién gestiona mejor su presencia digital.</p>
 
       <h2>1. El Fin de la Era de "Revolico" y el Spam en Grupos</h2>
       <p>Durante años, publicar en "Revolico Santa Clara" o "La Candonga" era suficiente para vender. Hoy, estos grupos están saturados de ruido publicitario. El consumidor cubano actual ha desarrollado una "ceguera publicitaria": ignora automáticamente los posts mal diseñados o el spam constante.</p>
