--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="article-body">
-      <p>En el entramado urbano de Santa Clara, una ciudad que ha servido históricamente como termómetro comercial del centro de Cuba, se está librando una batalla silenciosa. No es una contienda visible en el Parque Vidal, sino una guerra administrativa en los almacenes traseros de las nuevas MIPYMES.</p>
+      <p>En el <a href="../diseno-web-santa-clara.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">entramado urbano de Santa Clara, </a> una ciudad que ha servido históricamente como termómetro comercial del centro de Cuba, se está librando una batalla silenciosa. No es una contienda visible en el Parque Vidal, sino una guerra administrativa en los almacenes traseros de las nuevas MIPYMES.</p>
 
       <p>La transición del Trabajo por Cuenta Propia a la estructura empresarial ha traído consigo una formalización legal, pero muchos negocios siguen operando con herramientas del siglo XIX: <strong>la libreta de apuntes</strong>.</p>
 
