--- a/articulos/seo-gastronomico-sancti-spiritus.html
+++ b/articulos/seo-gastronomico-sancti-spiritus.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="article-body">
-      <p>Sancti Spíritus es una ciudad de tradiciones, pero el paladar del consumidor está cambiando. Hoy, antes de visitar un restaurante cerca del Puente del Yayabo, el cliente cubano (y el turista) hace una búsqueda rápida en su teléfono. Si tu negocio no aparece en ese momento crítico, simplemente no existes para él.</p>
+      <p><a href="../programadores-sancti-spiritus.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Sancti Spíritus</a> es una ciudad de tradiciones, pero el paladar del consumidor está cambiando. Hoy, antes de visitar un restaurante cerca del Puente del Yayabo, el cliente cubano (y el turista) hace una búsqueda rápida en su teléfono. Si tu negocio no aparece en ese momento crítico, simplemente no existes para él.</p>
 
       <h2>1. El Local Pack: Tu ubicación es tu mejor anuncio</h2>
       <p>Cuando alguien busca "comida italiana en Sancti Spíritus", Google muestra un mapa con tres opciones. Estar ahí no es cuestión de suerte, es <strong>SEO Local aplicado</strong>. Optimizamos tu perfil de Google Business para que las reseñas, los horarios y las fotos de tus platos trabajen para ti mientras tú te enfocas en la cocina.</p>
