--- a/articulos/seo-restaurantes-cuba.html
+++ b/articulos/seo-restaurantes-cuba.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="article-body">
-      <p>La historia comercial de Sancti Spíritus se ha escrito tradicionalmente sobre piedra y barro. Sin embargo, en 2025, el éxito de tu restaurante se escribe en código binario. La calidad de tu comida ya no es lo único que importa: si no te encuentran en el celular, no existes.</p>
+      <p>La <a href="../programadores-sancti-spiritus.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">historia comercial de Sancti Spíritus</a> se ha escrito tradicionalmente sobre piedra y barro. Sin embargo, en 2025, el éxito de tu restaurante se escribe en código binario. La calidad de tu comida ya no es lo único que importa: si no te encuentran en el celular, no existes.</p>
 
       <h2>La Economía de los Megas</h2>
       <p>En Cuba, navegar por internet no es ocio, es una inversión. El usuario cubano opera bajo una "economía de megas". Si tu menú es un archivo PDF de 10MB, estás perdiendo clientes antes de que crucen tu puerta.</p>
