--- a/articulos/codigo-a-medida-vs-wordpress-cuba.html
+++ b/articulos/codigo-a-medida-vs-wordpress-cuba.html
@@ -26,7 +26,7 @@
     <header class="article-header">
       <span class="article-category">INGENIERÍA WEB</span>
       <h1 class="article-title">Código a Medida vs. WordPress: Por qué tu negocio en Cuba no puede permitirse una web lenta</h1>
-      <p class="article-meta">Por Agencia Señores | Lectura: 24 min | Análisis Técnico</p>
+      <p class="article-meta">Por <a href="../index.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Agencia Señores</a> | Lectura: 24 min | Análisis Técnico</p>
     </header>
 
     <div class="article-body">
