--- a/articulos/marketing-inmobiliario-cienfuegos-lujo.html
+++ b/articulos/marketing-inmobiliario-cienfuegos-lujo.html
@@ -37,7 +37,7 @@
     </header>
 
     <div class="article-body">
-      <p>Cienfuegos, la Perla del Sur, posee uno de los mercados inmobiliarios más dinámicos y valiosos de Cuba. Desde las mansiones eclécticas de Punta Gorda hasta los apartamentos modernos cerca del Malecón, vender una propiedad de alto valor en 2025 requiere mucho más que un cartel de "Se Vende" o un post en un grupo de Facebook saturado.</p>
+      <p><a href="../diseno-web-cienfuegos.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Cienfuegos, la Perla del Sur</a>, posee uno de los mercados inmobiliarios más dinámicos y valiosos de Cuba. Desde las mansiones eclécticas de Punta Gorda hasta los apartamentos modernos cerca del Malecón, vender una propiedad de alto valor en 2025 requiere mucho más que un cartel de "Se Vende" o un post en un grupo de Facebook saturado.</p>
 
       <h2>1. El Estado del Mercado Inmobiliario en el Centro de Cuba</h2>
       <p>A diferencia de otros sectores, el mercado inmobiliario de lujo en Cienfuegos se mueve por la confianza y la exclusividad. El comprador potencial, muchas veces residente en el extranjero o inversor de nuevas MIPYMES exitosas, no busca solo "una casa", busca una inversión segura y un estilo de vida. El marketing tradicional en Cuba ha fallado al tratar estas joyas arquitectónicas como productos de consumo masivo.</p>
