--- a/diseno-web-cienfuegos.html
+++ b/diseno-web-cienfuegos.html
@@ -60,7 +60,7 @@
       {"@type": "Place", "name": "Rancho Luna"},
       {"@type": "City", "name": "Palmira"}
     ],
-    "hasMap": "https://www.google.com/maps/place/Cienfuegos,+Cuba/",
+    "hasMap": "https://maps.app.goo.gl/9XBL3mqcHt5b9eRw8",
     "openingHoursSpecification": {
       "@type": "OpeningHoursSpecification",
       "dayOfWeek": [
