--- a/diseno-web-santa-clara.html
+++ b/diseno-web-santa-clara.html
@@ -60,7 +60,7 @@
     {"@type": "City", "name": "Remedios"},
     {"@type": "City", "name": "Camajuaní"}
   ],
-  "hasMap": "https://www.google.com/maps/place/Santa+Clara",
+  "hasMap": "https://maps.app.goo.gl/9XBL3mqcHt5b9eRw8",
   "openingHoursSpecification": {
     "@type": "OpeningHoursSpecification",
     "dayOfWeek": [
