--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   "url": "https://agenciaseniors.com/",
   "telephone": "+5356621636",
   "priceRange": "$$",
-  "hasMap": "https://www.google.com/maps/search/?api=1&query=21.9297,-79.4425",
+  "hasMap": "https://maps.app.goo.gl/9XBL3mqcHt5b9eRw8",
   "openingHoursSpecification": {
     "@type": "OpeningHoursSpecification",
     "dayOfWeek": [
