--- a/programadores-sancti-spiritus.html
+++ b/programadores-sancti-spiritus.html
@@ -60,7 +60,7 @@
       {"@type": "City", "name": "Cabaiguán"},
       {"@type": "City", "name": "Jatibonico"}
     ],
-    "hasMap": "http://googleusercontent.com/maps.google.com/3",
+    "hasMap": "https://maps.app.goo.gl/9XBL3mqcHt5b9eRw8",
     "openingHoursSpecification": {
       "@type": "OpeningHoursSpecification",
       "dayOfWeek": [
