--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   "image": "https://agenciaseniors.com/img/diseno-identidad-visual-lujo-cuba.avif",
   "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
   "address": {
-    "@type": "PostalAddress",
+    "@type": "60100",
     "addressLocality": "Sancti Spíritus",
     "addressRegion": "SS",
     "addressCountry": "CU"
