--- a/articulos/facebook-ads-cuba.html
+++ b/articulos/facebook-ads-cuba.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Publicidad en Facebook para Negocios en Cuba | Agencia Señores</title>
-  <meta name="description" content="¿Tus ventas dependen de Revolico? Implementa estrategias de publicidad profesional en Facebook e Instagram para <a href="../diseno-web-santa-clara.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">MIPYMES en Santa Clara</a> y el centro de Cuba." />
+  <meta name="description" content="¿Tus ventas dependen de Revolico? Implementa estrategias de publicidad profesional en Facebook e Instagram para MIPYMES en Santa Clara y el centro de Cuba." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
   <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
@@ -46,7 +46,7 @@
       <p>Muchos dueños de negocios creen que marketing digital es bombardear grupos. Eso no es marketing, es molestia. Y lo peor: Facebook está penalizando ese comportamiento, reduciendo tu alcance.</p>
 
       <h2>La Estrategia de Contenidos</h2>
-      <p>En <strong>Agencia Señores</strong>, cambiamos el enfoque. No perseguimos al cliente; hacemos que el cliente venga a ti. ¿Cómo?</p>
+      <p>En <strong><a href="../diseno-web-santa-clara.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Agencia Señores</a></strong>, cambiamos el enfoque. No perseguimos al cliente; hacemos que el cliente venga a ti. ¿Cómo?</p>
       <ul>
         <li><strong>Segmentación Real:</strong> Creamos contenido diseñado para tu cliente ideal (el que tiene dinero y quiere calidad), no para el que busca lo más barato.</li>
         <li><strong>Embudos de Venta:</strong> Convertimos un "Me gusta" en un mensaje de WhatsApp y luego en una venta.</li>
