--- a/articulos/automatizacion-whatsapp-negocios.html
+++ b/articulos/automatizacion-whatsapp-negocios.html
@@ -25,11 +25,11 @@
 <body>
 
   <header>
-    <a href="../index.html" class="brand">
+    <a href="https://agenciaseniors.com/" class="brand">
       <div class="logo"><img src="../img/favicon.png" alt="Logo" width="50"></div>
       <div><div class="wordmark">SEÑORES</div></div>
     </a>
-    <nav><a href="../index.html">VOLVER AL INICIO</a></nav>
+    <nav><a href="https://agenciaseniors.com/">VOLVER AL INICIO</a></nav>
   </header>
 
   <article class="article-container">
@@ -51,7 +51,7 @@
         <li><strong>Catálogos Interactivos:</strong> El cliente ve tus productos sin salir del chat.</li>
         <li><strong>Respuestas Automáticas Inteligentes:</strong> Tu "robot" contesta precios, horarios y ubicación al instante.</li>
       </ul>
-      <p>No necesitas una aplicación compleja. Necesitas optimizar la herramienta que ya tienes en el bolsillo. Y recuerda: una vez automatices la atención, necesitarás atraer más clientes con una <a href="facebook-ads-cuba.html" style="color: #D4AF37; text-decoration: none; font-weight: bold;">Estrategia de Marketing en Facebook</a> para llenar ese chat de pedidos.</p>
+      <p>No necesitas una aplicación compleja. Necesitas optimizar la herramienta que ya tienes en el bolsillo. Y recuerda: una vez automatices la atención, necesitarás atraer más clientes con una <a href="https://agenciaseniors.com/articulos/facebook-ads-cuba.html" style="color: #D4AF37; text-decoration: none; font-weight: bold;">Estrategia de Marketing en Facebook</a> para llenar ese chat de pedidos.</p>
 
       <div class="highlight-box">
         <p style="font-family: 'Playfair Display', serif; font-size: 22px; color: #fff; margin:0;">"Ahorra hasta 4 horas diarias de atención al cliente implementando un sistema de ventas automatizado."</p>
