--- a/articulos/branding-identidad-visual.html
+++ b/articulos/branding-identidad-visual.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="article-body">
-      <p>En el mercado privado de Cuba, la competencia es feroz. Ya no basta con tener un buen producto; tienes que parecerlo. Si vendes una <a href="../diseno-web-cienfuegos.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">experiencia de lujo en Punta Gorda</a> o una cena exclusiva en Santa Clara, pero tu logo fue hecho en 5 minutos con una aplicación gratuita, estás enviando un mensaje contradictorio.</p>
+      <p>En el mercado privado de Cuba, la competencia es feroz. Ya no basta con tener un buen producto; tienes que parecerlo. Si vendes una <a href="https://agenciaseniors.com/articulos/diseno-web-cienfuegos.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">experiencia de lujo en Punta Gorda</a> o una cena exclusiva en Santa Clara, pero tu logo fue hecho en 5 minutos con una aplicación gratuita, estás enviando un mensaje contradictorio.</p>
 
       <h2>La Primera Impresión es Digital</h2>
       <p>Antes de que un cliente pruebe tu comida o entre a tu hostal, ya te juzgó por tu foto de perfil en WhatsApp o Instagram. Una identidad visual "barata" (colores chillones, tipografías ilegibles, imágenes pixeladas) hace que el cliente asuma inconscientemente que tu servicio también es de baja calidad.</p>
