--- a/articulos/por-que-web-a-medida.html
+++ b/articulos/por-que-web-a-medida.html
@@ -25,11 +25,11 @@
 <body>
 
   <header>
-    <a href="../index.html" class="brand">
+    <a href="https://agenciaseniors.com" class="brand">
       <div class="logo"><img src="../img/favicon.png" alt="Logo" width="50"></div>
       <div><div class="wordmark">SEÑORES</div></div>
     </a>
-    <nav><a href="../index.html">VOLVER AL INICIO</a></nav>
+    <nav><a href="https://agenciaseniors.com">VOLVER AL INICIO</a></nav>
   </header>
 
   <article class="article-container">
@@ -49,7 +49,7 @@
       <p>Nosotros somos estudiantes de Ciencias de la Computación. No usamos "copiar y pegar". Escribimos código a mano (HTML, CSS, JS puro) optimizado al extremo.</p>
       <ul>
         <li><strong>Velocidad:</strong> Nuestras webs obtienen puntuaciones de 90-100 en Google Lighthouse.</li>
-        <li><strong>SEO Técnico:</strong> Estructura limpia que Google ama leer. Esto es la base para dominar el <a href="seo-restaurantes-cuba.html" style="color: #D4AF37; text-decoration: none; font-weight: bold;">SEO Local en Sancti Spíritus</a> y aparecer primero en el mapa.</li>
+        <li><strong>SEO Técnico:</strong> Estructura limpia que Google ama leer. Esto es la base para dominar el <a href="https://agenciaseniors.com/articulos/seo-restaurantes-cuba.html" style="color: #D4AF37; text-decoration: none; font-weight: bold;">SEO Local en Sancti Spíritus</a> y aparecer primero en el mapa.</li>
         <li><strong>Seguridad:</strong> Al no usar bases de datos vulnerables, nuestras webs son casi imposibles de hackear.</li>
       </ul>
 
