--- a/programadores-sancti-spiritus.html
+++ b/programadores-sancti-spiritus.html
@@ -352,7 +352,21 @@
 
   </div>
 </section>
-
+<section style="background: #111; padding: 60px 10%; border-top: 1px solid #222;">
+  <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+    <h2 style="color:white; margin-bottom: 30px;">RECURSOS PARA HOSTALES Y PALADARES</h2>
+    
+    <div class="blog-preview-card" style="background: #1a1a1a; padding: 30px; border-radius: 8px; border: 1px solid #333; transition: transform 0.3s ease;">
+      <a href="https://agenciaseniors.com/articulos/seo-gastronomico-sancti-spiritus.html" style="text-decoration:none; display: block;">
+        <h3 style="color: #D4AF37; margin-bottom: 15px; font-size: 1.5rem;">SEO Gastronómico en el Yayabo</h3>
+        <p style="color: #ccc; line-height: 1.6;">
+          Cómo llenar tus mesas usando Google Maps y SEO local. Estrategias probadas para restaurantes en Sancti Spíritus y Trinidad.
+        </p>
+        <span style="display: inline-block; margin-top: 20px; color: #fff; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px; border-bottom: 1px solid #D4AF37;">LEER ARTÍCULO COMPLETO &rarr;</span>
+      </a>
+    </div>
+  </div>
+</section>
 <footer>
   <div class="footer-content">
     <p>© 2025 SEÑORES — PROGRAMADORES EN SANCTI SPÍRITUS</p>
