--- a/articulos/soberania-digital-hostales-trinidad.html
+++ b/articulos/soberania-digital-hostales-trinidad.html
@@ -23,11 +23,11 @@
 <body>
 
   <header>
-    <a href="../index.html" class="brand">
+    <a href="https://agenciaseniors.com/" class="brand">
       <div class="logo"><img src="../img/favicon.png" alt="Logo" width="50"></div>
       <div><div class="wordmark">SEÑORES</div></div>
     </a>
-    <nav><a href="../index.html">VOLVER AL INICIO</a></nav>
+    <nav><a href="https://agenciaseniors.com/">VOLVER AL INICIO</a></nav>
   </header>
 
   <article class="article-container">
