--- a/index.html
+++ b/index.html
@@ -238,17 +238,21 @@
   </div>
 </section>
 
-<section id="selection" class="reveal" style="background: #050505; padding-top: 80px;">
+<section id="selection" class="reveal" style="background: #050505; padding: 80px 0;">
   <div style="text-align: center; margin-bottom: 60px;">
-    <span style="color: var(--dorado-suave, #D4AF37); font-size: 12px; letter-spacing: 3px; font-weight: 700; display: block; margin-bottom: 10px;">THE SELECTION</span>
-    <h2 style="margin-top: 0; margin-bottom: 15px; color: #fff;">EXPERIENCIAS GASTRONÓMICAS</h2>
-    <p style="color: #666; max-width: 500px; margin: 0 auto; font-size: 14px;">
+    <span style="color: #D4AF37; font-size: 12px; letter-spacing: 3px; font-weight: 700; display: block; margin-bottom: 10px;">
+      THE SELECTION
+    </span>
+    <h2 style="margin: 0 auto; color: #fff; max-width: 90%; font-size: 2rem;">
+      EXPERIENCIAS GASTRONÓMICAS
+    </h2>
+    <p style="color: #666; max-width: 500px; margin: 15px auto 0; font-size: 14px;">
       Una colección curada de los mejores destinos culinarios, digitalizados por SEÑORES.
     </p>
   </div>
 
   <div class="selection-grid">
-    <a href="menues/d_lavida_bar/index.html" class="selection-card">
+    <a href="https://agenciaseniors.com/menues/d_lavida_bar/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/bar_vida.avif" alt="D' La Vida Bar" class="selection-img">
         <div class="overlay"><span class="btn-ver-menu">VER MENÚ</span></div>
@@ -259,7 +263,7 @@
       </div>
     </a>
 
-    <a href="menues/la-casona/index.html" class="selection-card">
+    <a href="https://agenciaseniors.com/menues/la-casona/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/la-casona.jpg" alt="Restaurante La Casona" class="selection-img">
         <div class="overlay"><span class="btn-ver-menu">VER MENÚ</span></div>
@@ -270,7 +274,7 @@
       </div>
     </a>
 
-    <a href="menues/el-real.html" class="selection-card">
+    <a href="https://agenciaseniors.com/menues/el-real.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Hostal El Real" class="selection-img">
         <div class="overlay"><span class="btn-ver-menu">VER MENÚ</span></div>
@@ -336,7 +340,7 @@
 <footer>
   <div class="footer-content">
     <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
-    <p style="font-size: 10px;"><a href="politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
+    <p style="font-size: 10px;"><a href="https://agenciaseniors.com/politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
   </div>
 </footer>
 
