--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </div>
     </a>
 
-    <a href="menues/el-real.html" class="selection-card">
+    <a href="menues/el-real/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Diseño de página web para hostales de lujo en Trinidad - Hostal El Real" class="selection-img">
         <div class="overlay">
@@ -472,4 +472,5 @@
 <script src="js/script.js"></script>
 
 </body>
+
 </html>
