--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
 
     <a href="menues/el-real/index.html" class="selection-card">
       <div class="selection-img-container">
-        <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Diseño de página web para hostales de lujo en Trinidad - Hostal El Real" class="selection-img">
+        <img src="img/el-real.jpg" alt="Diseño de página web para hostales de lujo en Trinidad - Hostal El Real" class="selection-img">
         <div class="overlay">
           <span class="btn-ver-menu">VER MENÚ</span>
         </div>
       </div>
       <div class="selection-info">
         <h3>EL REAL</h3>
-        <p>[PONER DIRECCIÓN AQUÍ]</p>
+        <p>Calle Maceo 7 e/ Independencia y Martí</p>
       </div>
     </a>
 
@@ -474,3 +474,4 @@
 </body>
 
 </html>
+
