--- a/blog.html
+++ b/blog.html
@@ -187,7 +187,22 @@
 </div>
 
 <footer>
-  <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
+  <div class="footer-content">
+    <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
+    <p style="font-size: 10px;"><a href="politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
+    <div class="seo-locations">
+      <span class="seo-label">Impulsando el sector privado en la Región Central:</span>
+      <nav class="seo-nav">
+        <a href="programadores-sancti-spiritus.html" title="Diseño Web y Marketing en Sancti Spíritus">Sancti Spíritus</a>
+        <span class="separator">|</span>
+        <a href="diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
+        <span class="separator">|</span>
+        <a href="diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
+        <span class="separator">|</span>
+        <a href="index.html#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
+      </nav>
+    </div>
+  </div>
 </footer>
 
 <script src="js/script.js"></script>
