--- a/diseno-web-santa-clara.html
+++ b/diseno-web-santa-clara.html
@@ -283,7 +283,7 @@
       </div>
     </a>
 
-    <a href="menues/el-real.html" class="selection-card">
+    <a href="menues/el-real/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Diseño de páginas web para hostales y turismo en Santa Clara y Remedios" class="selection-img">
         <div class="overlay">
