--- a/articulos/marketing-inmobiliario-cienfuegos-lujo.html
+++ b/articulos/marketing-inmobiliario-cienfuegos-lujo.html
@@ -37,7 +37,7 @@
     </header>
 
     <div class="article-body">
-      <p><a href="https://agenciaseniors.com/articulos/diseno-web-cienfuegos.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Cienfuegos, la Perla del Sur</a>, posee uno de los mercados inmobiliarios más dinámicos y valiosos de Cuba. Desde las mansiones eclécticas de Punta Gorda hasta los apartamentos modernos cerca del Malecón, vender una propiedad de alto valor en 2025 requiere mucho más que un cartel de "Se Vende" o un post en un grupo de Facebook saturado.</p>
+      <p><a href="../diseno-web-cienfuegos.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Cienfuegos, la Perla del Sur</a>, posee uno de los mercados inmobiliarios más dinámicos y valiosos de Cuba. Desde las mansiones eclécticas de Punta Gorda hasta los apartamentos modernos cerca del Malecón, vender una propiedad de alto valor en 2025 requiere mucho más que un cartel de "Se Vende" o un post en un grupo de Facebook saturado.</p>
 
       <h2>1. El Estado del Mercado Inmobiliario en el Centro de Cuba</h2>
       <p>A diferencia de otros sectores, el mercado inmobiliario de lujo en Cienfuegos se mueve por la confianza y la exclusividad. El comprador potencial, muchas veces residente en el extranjero o inversor de nuevas MIPYMES exitosas, no busca solo "una casa", busca una inversión segura y un estilo de vida. El marketing tradicional en Cuba ha fallado al tratar estas joyas arquitectónicas como productos de consumo masivo.</p>
@@ -77,6 +77,29 @@
     </div>
   </article>
 
-  <footer><p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p></footer>
+  <footer>
+  <div class="footer-content">
+    <p>© 2026 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
+    <p style="font-size: 10px;"><a href="politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
+    <div class="seo-locations">
+      <span class="seo-label">Impulsando el sector privado en la Región Central:</span>
+      <nav class="seo-nav">
+        <a href="programadores-sancti-spiritus.html" title="Diseño Web y Marketing en Sancti Spíritus">Sancti Spíritus</a>
+        <span class="separator">|</span>
+        <a href="diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
+        <span class="separator">|</span>
+        <a href="diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
+        <span class="separator">|</span>
+        <a href="index.html#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
+      </nav>
+    </div>
+  </div>
+</footer><!DOCTYPE html>
+  <nav class="seo-nav">
+  <a href="../programadores-sancti-spiritus.html">Sancti Spíritus</a> |
+  <a href="../diseno-web-santa-clara.html">Santa Clara</a> |
+  <a href="../diseno-web-cienfuegos.html">Cienfuegos</a>
+</nav>
+</footer>
 </body>
 </html>
