--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -80,8 +80,23 @@
   </article>
   
   <footer>
-    <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
-  </footer>
+  <div class="footer-content">
+    <p>© 2026 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
+    <p style="font-size: 10px;"><a href="politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
+    <div class="seo-locations">
+      <span class="seo-label">Impulsando el sector privado en la Región Central:</span>
+      <nav class="seo-nav">
+        <a href="programadores-sancti-spiritus.html" title="Diseño Web y Marketing en Sancti Spíritus">Sancti Spíritus</a>
+        <span class="separator">|</span>
+        <a href="diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
+        <span class="separator">|</span>
+        <a href="diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
+        <span class="separator">|</span>
+        <a href="index.html#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
+      </nav>
+    </div>
+  </div>
+</footer><!DOCTYPE html>
   <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
   <script src="../js/blog-script.js"></script>
 </body>
