--- a/programadores-sancti-spiritus.html
+++ b/programadores-sancti-spiritus.html
@@ -384,22 +384,22 @@
 
 <footer>
   <div class="footer-content">
-    <p>© 2025 SEÑORES — PROGRAMADORES EN SANCTI SPÍRITUS</p>
+    <p>© 2026 SEÑORES — PROGRAMADORES SANCTI SPÍRITUS</p>
     <p style="font-size: 10px;"><a href="politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
     <div class="seo-locations">
-      <span class="seo-label">Nuestros Servicios:</span>
+      <span class="seo-label">Impulsando el sector privado en la Región Central:</span>
       <nav class="seo-nav">
-        <a href="#" title="Diseño Web en Sancti Spíritus">Sancti Spíritus</a>
+        <a href="programadores-sancti-spiritus.html" title="Diseño Web y Marketing en Sancti Spíritus">Sancti Spíritus</a>
         <span class="separator">|</span>
-        <a href="diseno-web-santa-clara.html" title="Programadores en Santa Clara">Santa Clara</a>
+        <a href="diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
         <span class="separator">|</span>
-        <a href="diseno-web-cienfuegos.html" title="Diseño Web en Cienfuegos">Cienfuegos</a>
+        <a href="diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
         <span class="separator">|</span>
-        <a href="#" title="Desarrollo Web en Trinidad">Trinidad</a>
+        <a href="index.html#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
       </nav>
     </div>
   </div>
-</footer>
+</footer><!DOCTYPE html>
 
 <a href="https://wa.me/5356621636?text=Hola,%20me%20interesa%20una%20web%20en%20Sancti%20Spíritus." class="whatsapp-float" target="_blank" aria-label="Escribir por WhatsApp">
   <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="#ffffff">
