--- a/articulos/marketing-inmobiliario-cienfuegos-lujo.html
+++ b/articulos/marketing-inmobiliario-cienfuegos-lujo.html
@@ -84,14 +84,14 @@
     <div class="seo-locations">
       <span class="seo-label">Impulsando el sector privado en la Región Central:</span>
       <nav class="seo-nav">
-        <a href="programadores-sancti-spiritus.html" title="Diseño Web y Marketing en Sancti Spíritus">Sancti Spíritus</a>
-        <span class="separator">|</span>
-        <a href="diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
-        <span class="separator">|</span>
-        <a href="diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
-        <span class="separator">|</span>
-        <a href="index.html#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
-      </nav>
+  <a href="../programadores-sancti-spiritus.html" title="Diseño Web y Marketing en Sancti Spíritus">Sancti Spíritus</a>
+  <span class="separator">|</span>
+  <a href="../diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
+  <span class="separator">|</span>
+  <a href="../diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
+  <span class="separator">|</span>
+  <a href="../index.html#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
+</nav>
     </div>
   </div>
 </footer><!DOCTYPE html>
