--- a/articulos/facebook-ads-cuba.html
+++ b/articulos/facebook-ads-cuba.html
@@ -46,7 +46,7 @@
       <p>Muchos dueños de negocios creen que marketing digital es bombardear grupos. Eso no es marketing, es molestia. Y lo peor: Facebook está penalizando ese comportamiento, reduciendo tu alcance.</p>
 
       <h2>La Estrategia de Contenidos</h2>
-      <p>En <strong><a href="https://agenciaseniors.com/articulos/diseno-web-santa-clara.html" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Agencia Señores</a></strong>, cambiamos el enfoque. No perseguimos al cliente; hacemos que el cliente venga a ti. ¿Cómo?</p>
+      <p>En <strong><a href="../diseno-web-santa-clara.html"" style="color: #D4AF37; text-decoration: none; font-weight: 600;">Agencia Señores</a></strong>, cambiamos el enfoque. No perseguimos al cliente; hacemos que el cliente venga a ti. ¿Cómo?</p>
       <ul>
         <li><strong>Segmentación Real:</strong> Creamos contenido diseñado para tu cliente ideal (el que tiene dinero y quiere calidad), no para el que busca lo más barato.</li>
         <li><strong>Embudos de Venta:</strong> Convertimos un "Me gusta" en un mensaje de WhatsApp y luego en una venta.</li>
